Fix navbar and logo styling on mobile

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -96,9 +96,12 @@ body {
   color: @error-color;
 }
 
+.app-navbar {
+  height: @navbar-height !important;
+}
+
 .app-navbar, .app-navdrawer {
   background-color: @navbar-color !important;
-  height: @navbar-height !important;
   position: relative;
 
   a {
@@ -262,6 +265,8 @@ body {
 
 // Image Gallery
 .image-gallery {
+  .mobile-hide;
+
   position: relative;
   height: 100%;
   width: 100%;
@@ -305,8 +310,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media @mobile {
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: @header-height - @navbar-height;
+    width: @header-height - @navbar-height;
+  }
 }
 
 .floating-logo-img {
+  max-height: 100%;
   width: 90%;
 }
